Changelog
=========

1.1 (unreleased)
----------------

- Create events on registration and login.
  [jone]

- Fix setting portrait by using utf-8.
  [jone]

- Various code clean ups (trailing spaces, pep8/pylint)
- Add Test setup
- Add basic functional tests
- Fix setup.py
  [mathias.leimgruber]


1.0 (16-05-2013)
----------------

- Initial release
  [basmaijak]